Fixed the Hero section alignment

--- a/frontend/src/components/Hero/Hero.module.css
+++ b/frontend/src/components/Hero/Hero.module.css
@@ -14,19 +14,39 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-bottom: auto;
 }
 
-/* Styles for JoinNow button */
-.joinNow {
-  background-color: var(--primary-color) !important;
-  border-radius: 10px !important;
-  padding: 10px 20px !important;
-  box-shadow: 0px 15px 30px var(--primary-color) !important;
+/* Styles for joinButton button */
+.joinButton {
+  padding: 10px 20px;
+  font-size: 16px;
+  border: none;
+  background-color: var(--primary-color);
+  color: var(--secondary-color);
+  border-radius: 10px;
+  cursor: pointer;
+  box-shadow: 0px 15px 20px var(--primary-color);
+  display: inline-flex;
+  align-items: center;
+  font-family: Poppins;
+}
+
+.joinButton:hover {
+  background-color: darken(10%);
+}
+
+.arrowIcon {
+  margin-left: 10px;
 }
 
 /* Styles for hero image */
+.hero {
+  margin-top: -30px;
+}
+
 .hero img {
-  height: 500px;
+  height: 550px;
 }
 
 /* Styles for smallHero image on smaller screens */
@@ -34,27 +54,28 @@
   display: none;
 }
 
-/* Styles for welcome and referral text */
-.welcome,
-.referral {
+/* Styles for textWelcome and textReferral text */
+.textWelcome,
+.textReferral {
   margin-bottom: 10px;
   font-size: 50px;
 }
 
-/* Styles for referral text */
-.referral {
+/* Styles for textReferral text */
+.textReferral {
   font-weight: 600;
 }
 
-/* Styles for info text */
-.info {
-  margin-bottom: 40px;
+/* Styles for textInfo text */
+.textInfo {
+  margin-bottom: 60px;
   font-size: 24px;
 }
 
-/* Styles for infos container */
-.infos {
+/* Styles for textContent container */
+.textContent {
   padding: 40px;
+  margin-right: auto;
 }
 
 /* Media query for screens up to 800px */
@@ -87,26 +108,26 @@
     object-fit: cover;
   }
 
-  /* Styles for welcome and referral text on smaller screens */
-  .welcome,
-  .referral {
+  /* Styles for textWelcome and textReferral text on smaller screens */
+  .textWelcome,
+  .textReferral {
     margin-bottom: 10px;
     font-size: 30px;
   }
 
-  /* Styles for referral text on smaller screens */
-  .referral {
+  /* Styles for textReferral text on smaller screens */
+  .textReferral {
     font-weight: 600;
   }
 
-  /* Styles for info text on smaller screens */
-  .info {
+  /* Styles for textInfo text on smaller screens */
+  .textInfo {
     margin-bottom: 40px;
     font-size: 18px;
   }
 
-  /* Styles for infos container on smaller screens */
-  .infos {
+  /* Styles for textContent container on smaller screens */
+  .textContent {
     padding: 40px 15px;
   }
 }
@@ -118,6 +139,7 @@
     margin: 0;
     padding: 80px 40px 20px 20px;
     width: 95%;
+    margin-top: -50px;
   }
 
   /* Styles for hero image container on medium-sized screens */
@@ -132,20 +154,25 @@
     object-fit: contain;
   }
 
-  /* Styles for welcome and referral text on medium-sized screens */
-  .welcome,
-  .referral {
+  .textContent {
+    margin-right: auto;
+    margin-left: 50px;
+  }
+
+  /* Styles for textWelcome and textReferral text on medium-sized screens */
+  .textWelcome,
+  .textReferral {
     margin-bottom: 10px;
     font-size: 30px;
   }
 
-  /* Styles for referral text on medium-sized screens */
-  .referral {
+  /* Styles for textReferral text on medium-sized screens */
+  .textReferral {
     font-weight: 600;
   }
 
-  /* Styles for info text on medium-sized screens */
-  .info {
+  /* Styles for textInfo text on medium-sized screens */
+  .textInfo {
     margin-bottom: 40px;
     font-size: 18px;
   }
